src/snapshots/gpg_import__git__tests__display_signing_config.snap
---
source: src/git.rs
expression: cfg.to_string()
---
user.name:       batman
user.email:      batman@dc.com
user.signingKey: FDEFE8AB8796E127
commit.gpgsign:  true
tag.gpgsign:     true
push.gpgsign:    if-asked
